--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,9 +1,87 @@
 <view class="indexContainer">
     <!-- 轮播图区域 -->
-    <swiper class="banners">
-      <swiper-item><image src="/static/images/img111.jpg" alt=""></image></swiper-item>
-      <swiper-item><image src="/static/images/img111.jpg" alt=""></image></swiper-item>
-      <swiper-item><image src="/static/images/img111.jpg" alt=""></image></swiper-item>
+    <swiper class="banners" indicator-dots="true" indicator-active-color="#d43c33" indicator-color="ivory">
+      <swiper-item wx:for="{{bannerList}}">
+      <image src="{{item.pic}}" alt=""></image>
+      </swiper-item>
+
     </swiper>
+
+    <!-- 图标导航区域 -->
+    <view class="navContainer">
+      <view class="navItem">
+        <text class="iconfont icon-tuijian"></text>
+        <text>每日推荐</text>
+      </view>
+
+      <view class="navItem">
+        <text class="iconfont icon-icon-"></text>
+        <text>歌单</text>
+      </view>
+
+      <view class="navItem">
+        <text class="iconfont icon-paixingbang"></text>
+        <text>排行榜</text>
+      </view>
+
+      <view class="navItem">
+        <text class="iconfont icon-diantai"></text>
+        <text>电台</text>
+      </view>
+
+      <view class="navItem">
+        <text class="iconfont icon-zhibo"></text>
+        <text>直播</text>
+      </view>
+    </view>
+
+    <!-- 推荐歌曲 -->
+    <view class="recommendContainer">
+      <view class="header">
+        <text class="recommendgd">推荐歌单</text>
+        <view class="title">
+            <text class="recommendtitle">为你精心推荐</text>
+            <text class="more">更多></text>
+        </view>
+        <!-- 推荐歌单图片 -->
+        <view class="tjimg">
+          <scroll-view class="recommendScroll" enable-flex="true" scroll-x="true">
+            <view class="scrollItem">
+              <image src="/static/images/logo.png"></image>
+              <text>歌单歌单歌歌单11111111111111111111111111121111</text>
+            </view>
+
+            <view class="scrollItem">
+              <image src="/static/images/logo.png"></image>
+              <text>歌单歌单歌单歌单歌单歌单222222222222222222222222222222221</text>
+            </view>
+
+            <view class="scrollItem">
+              <image src="/static/images/logo.png"></image>
+              <text>歌单11111111111</text>
+            </view>
+
+            <view class="scrollItem">
+              <image src="/static/images/logo.png"></image>
+              <text>歌单11111111111</text>
+            </view>
+            <view class="scrollItem">
+              <image src="/static/images/logo.png"></image>
+              <text>歌单11111111111</text>
+            </view>
+            <view class="scrollItem">
+              <image src="/static/images/logo.png"></image>
+              <text>歌单11111111111</text>
+            </view>
+            <view class="scrollItem">
+              <image src="/static/images/logo.png"></image>
+              <text>歌单11111111111</text>
+            </view>
+        </scroll-view>
+        </view>
+
+        
+      </view>
+    </view>
 
 </view>
