--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -8,3 +8,88 @@
   width: 100%;
   height: 100%;
 }
+.navContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+.navContainer .navItem{
+  display: flex;
+  flex-direction: column;
+  /* text-align:center; */
+  align-items: center;
+  width: 20%;
+}
+.navItem .iconfont{
+  width: 100rpx;
+  height: 100rpx;
+  border-radius: 50%;
+  background-color: #ff3333;
+  text-align: center;
+  line-height: 100rpx;
+  font-size: 50rpx;
+  color: #fff;
+  margin: 20rpx 0;
+}
+.navItem text{
+  font-size: 26rpx;
+}
+.recommendContainer{
+  padding:0 20rpx;
+  margin-top: 20rpx;
+}
+.recommendContainer .recommendgd {
+  font-size: 32rpx;
+  line-height: 80rpx;
+  color:#666;
+}
+.recommendContainer .title{
+  width: 100%;
+  height: 70rpx;
+  margin-top: -10rpx;
+  position: relative;
+}
+.recommendContainer .recommendtitle{
+  display: block;
+  font-size: 42rpx;
+  line-height: 80rpx;
+}
+.recommendContainer .more{
+  display: block;
+  font-size: 32rpx;
+  color:rgb(26, 26, 26);
+  margin-right: 10rpx;
+  position: absolute;
+  top: 18rpx;
+  right: 10rpx;
+}
+ .tjimg{
+  margin-top: 20rpx;
+}
+.scrollItem{
+  width: 200rpx;
+  margin-right: 20rpx;
+}
+ .tjimg .scrollItem image{
+  width: 200rpx;
+  height: 200rpx;
+}
+.recommendScroll{
+  display: flex;
+}
+.scrollItem text{
+  display: block;
+  font-size: 26rpx;
+  /* 单行文本溢出省略号代替 */
+  /* white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis; */
+  /* 多行文本溢出省略号代替 */
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+
+}
