--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,7 +1,7 @@
 <view class="indexContainer">
     <!-- 轮播图区域 -->
     <swiper class="banners" indicator-dots="true" indicator-active-color="#d43c33" indicator-color="ivory">
-      <swiper-item wx:for="{{bannerList}}">
+      <swiper-item wx:key="bannerId" wx:for="{{bannerList}}">
       <image src="{{item.pic}}" alt=""></image>
       </swiper-item>
 
@@ -36,52 +36,42 @@
     </view>
 
     <!-- 推荐歌曲 -->
-    <view class="recommendContainer">
-      <view class="header">
-        <text class="recommendgd">推荐歌单</text>
-        <view class="title">
-            <text class="recommendtitle">为你精心推荐</text>
-            <text class="more">更多></text>
-        </view>
+      <view class="recommendContainer">
+ 
+       <NavHeader title="推荐歌单" nav="为你精心推荐"></NavHeader>
+
         <!-- 推荐歌单图片 -->
         <view class="tjimg">
           <scroll-view class="recommendScroll" enable-flex="true" scroll-x="true">
-            <view class="scrollItem">
-              <image src="/static/images/logo.png"></image>
-              <text>歌单歌单歌歌单11111111111111111111111111121111</text>
+            <view class="scrollItem" wx:key="id" wx:for="{{recommendList}}" wx:for-item="recommendItem">
+              <image src="{{recommendItem.picUrl}}"></image>
+              <text>{{recommendItem.name}}</text>
             </view>
-
-            <view class="scrollItem">
-              <image src="/static/images/logo.png"></image>
-              <text>歌单歌单歌单歌单歌单歌单222222222222222222222222222222221</text>
-            </view>
-
-            <view class="scrollItem">
-              <image src="/static/images/logo.png"></image>
-              <text>歌单11111111111</text>
-            </view>
-
-            <view class="scrollItem">
-              <image src="/static/images/logo.png"></image>
-              <text>歌单11111111111</text>
-            </view>
-            <view class="scrollItem">
-              <image src="/static/images/logo.png"></image>
-              <text>歌单11111111111</text>
-            </view>
-            <view class="scrollItem">
-              <image src="/static/images/logo.png"></image>
-              <text>歌单11111111111</text>
-            </view>
-            <view class="scrollItem">
-              <image src="/static/images/logo.png"></image>
-              <text>歌单11111111111</text>
-            </view>
-        </scroll-view>
+          </scroll-view>
         </view>
-
-        
-      </view>
     </view>
+
+      <!-- 排行榜区域 -->
+      <view class="topList">
+        <!-- 头部区域 -->
+        <NavHeader title="排行榜" nav="热歌风向标"></NavHeader>
+        <!-- 内容区域 -->
+        <swiper class="topListSwiper" circular next-margin="50rpx" >
+          <!-- 一 -->
+          <swiper-item wx:for="{{topList}}" wx:key="name">
+              <view class="swiperItem" >
+                <view class="title">{{item.name}}</view>
+
+                <view class="musicItem" wx:for="{{item.tracks}}" wx:key="id" wx:for-item="musicItem">
+                  <image src="{{musicItem.al.picUrl}}"></image>
+                  <text class="count">{{index+1}}</text>
+                  <text class="musicName">{{musicItem.name}}</text>
+                </view>
+
+            </view>
+          </swiper-item>
+        </swiper>
+
+      </view>
 
 </view>
