--- a/pages/personal/personal.wxss
+++ b/pages/personal/personal.wxss
@@ -212,3 +212,17 @@
 .cardList .card-item .more {
   float: right;
 }
+
+/* 最近播放记录 */
+.recentScroll {
+  display: flex;
+  height: 200rpx;
+}
+.recentScroll image{
+  width: 200rpx;
+  height: 200rpx;
+  border-radius: 10rpx;
+}
+.recentItem{
+  margin-right: 20rpx;
+}
