--- a/Components/NavHeader/NavHeader.wxml
+++ b/Components/NavHeader/NavHeader.wxml
@@ -3,6 +3,6 @@
         <text class="topTitle">{{title}}</text>
         <view class="title">
             <text class="bigTitle">{{nav}}</text>
-            <text class="more">更多></text>
+            <text class="more">查看更多</text>
         </view>
 </view>
