--- a/Components/NavHeader/NavHeader.wxss
+++ b/Components/NavHeader/NavHeader.wxss
@@ -21,10 +21,13 @@
 }
 .header .more{
   display: block;
-  font-size: 32rpx;
-  color:rgb(26, 26, 26);
+  font-size: 28rpx;
+  padding: 6rpx 12rpx;
+  color:#333;
   margin-right: 10rpx;
   position: absolute;
   top: 18rpx;
   right: 10rpx;
+  border: 1rpx solid #333;
+  border-radius: 30rpx;
 }
