--- a/pages/recommendSong/recommendSong.wxss
+++ b/pages/recommendSong/recommendSong.wxss
@@ -24,8 +24,8 @@
 
 .recommendSongContainer .header .date{
   position: absolute;
-  margin-left: -85rpx;
-  margin-top: 50rpx;
+  margin-left: -81rpx;
+  margin-top: 26rpx;
   width: 300rpx;
   height: 100rpx;
   text-align: center;
@@ -33,10 +33,13 @@
   color: #fff;
 }
 .header .date .day{
-  font-size: 38rpx;
+  font-size: 78rpx;
   
 }
-
+.header .date .month{
+  font-size: 48rpx;
+  
+}
 /* 上半部分结束 */
 
 
